--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="A platform for makers, hobbyists, students, and professionals to easily store and visualize data recorded from internet-connected devices like Arduinos and Raspberry Pis."
         />
-        <title>React App</title>
+        <title>trackr</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
