Add create project as a menu item to the project list menu.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A platform for makers, hobbyists, students, and professionals to easily store and visualize data recorded from internet-connected devices like Arduinos and Raspberry Pis."
+      content="A platform for makers, hobbyists, students, and professionals to easily 
+      store and visualize data recorded from internet-connected devices like Arduinos 
+      and Raspberry Pis."
     />
     <link
       rel="stylesheet"
