--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="A platform for makers, hobbyists, students, and professionals to easily 
-      store and visualize data recorded from internet-connected devices like Arduinos 
-      and Raspberry Pis."/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><title>trackr</title><script defer="defer" src="/static/js/main.f614ce50.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root" style="display:flex;flex-direction:column;height:100vh"></div></body></html>
+<!doctype html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8"/>
+      <meta name="viewport" content="width=device-width,initial-scale=1"/>
+      <meta name="theme-color" content="#000000"/>
+      <meta name="description" content="A platform for makers, hobbyists, students, and professionals to easily 
+         store and visualize data recorded from internet-connected devices like Arduinos 
+         and Raspberry Pis."/>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+      <title>trackr</title>
+</head>
+<body>
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root" style="display:flex;flex-direction:column;height:100vh"></div>
+
+      <script type="text/javascript">
+            (function(l) {
+              if (l.search[1] === '/' ) {
+                var decoded = l.search.slice(1).split('&').map(function(s) { 
+                  return s.replace(/~and~/g, '&')
+                }).join('?');
+                window.history.replaceState(null, null,
+                    l.pathname.slice(0, -1) + decoded + l.hash
+                );
+              }
+            }(window.location))
+      </script>
+      <script defer="defer" src="/static/js/main.f614ce50.js"></script>
+   </body>
+</html>
